Fixing Bundle issue and get Pod bundle

--- a/VUIComponents/Classes/Components/FormFields/DropDown/View/MultiLineDropDownViewRTL.xib
+++ b/VUIComponents/Classes/Components/FormFields/DropDown/View/MultiLineDropDownViewRTL.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -50,7 +50,7 @@
                         <constraint firstAttribute="width" constant="16" id="Ams-uO-8e2"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mastercard" translatesAutoresizingMaskIntoConstraints="NO" id="ZuJ-00-0UA">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="master" translatesAutoresizingMaskIntoConstraints="NO" id="ZuJ-00-0UA">
                     <rect key="frame" x="260" y="15" width="40" height="23"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="pcm-x1-hTd"/>
@@ -79,6 +79,6 @@
     </objects>
     <resources>
         <image name="downArrow" width="60" height="20"/>
-        <image name="mastercard" width="627" height="379"/>
+        <image name="master" width="45" height="30"/>
     </resources>
 </document>
