--- a/VUIComponents/Classes/Components/Card/OldCard/SignpostsWithAvatarCardViewOld.xib
+++ b/VUIComponents/Classes/Components/Card/OldCard/SignpostsWithAvatarCardViewOld.xib
@@ -33,23 +33,23 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q79-Wc-dIi">
-                    <rect key="frame" x="0.0" y="0.0" width="378" height="153"/>
+                    <rect key="frame" x="0.0" y="0.0" width="378" height="353"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xWt-Rz-HEn">
-                            <rect key="frame" x="-0.5" y="0.0" width="378" height="153"/>
+                            <rect key="frame" x="-0.5" y="0.0" width="378" height="353"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cXb-W7-qn8">
-                                    <rect key="frame" x="0.0" y="0.0" width="6" height="153"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="6" height="353"/>
                                     <color key="backgroundColor" red="0.2901960784" green="0.30196078430000001" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="6" id="Lbq-Lc-tuS"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7LQ-r6-rRj" userLabel="Content">
-                                    <rect key="frame" x="16" y="0.0" width="347" height="153"/>
+                                    <rect key="frame" x="16" y="0.0" width="347" height="353"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6ui-Mh-dab">
-                                            <rect key="frame" x="0.0" y="54" width="45" height="45"/>
+                                            <rect key="frame" x="0.0" y="154" width="45" height="45"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="45" id="Jbm-Ik-YlS"/>
                                                 <constraint firstAttribute="height" constant="45" id="QPH-YZ-Wzf"/>
@@ -80,14 +80,14 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardArrow" translatesAutoresizingMaskIntoConstraints="NO" id="Yqk-DM-7TO">
-                                            <rect key="frame" x="323" y="65" width="24" height="24"/>
+                                            <rect key="frame" x="323" y="165" width="24" height="24"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="24" id="Iej-12-OOe"/>
                                                 <constraint firstAttribute="height" constant="24" id="zzP-N1-42K"/>
                                             </constraints>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeo-2j-bMz">
-                                            <rect key="frame" x="-15.5" y="0.0" width="378" height="153"/>
+                                            <rect key="frame" x="-15.5" y="0.0" width="378" height="353"/>
                                             <connections>
                                                 <action selector="HandleViewTappedAction:" destination="-1" eventType="touchUpInside" id="cSE-8S-sQJ"/>
                                             </connections>
@@ -136,17 +136,17 @@
                     </constraints>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oyl-yI-tyq">
-                    <rect key="frame" x="0.0" y="153" width="378" height="200"/>
+                    <rect key="frame" x="0.0" y="353" width="378" height="0.0"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JcY-QE-RnB" customClass="ExpandSignpostWithAvatarCardView">
-                            <rect key="frame" x="0.0" y="0.0" width="378" height="200"/>
+                            <rect key="frame" x="0.0" y="0.0" width="378" height="0.0"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="JcY-QE-RnB" firstAttribute="height" secondItem="oyl-yI-tyq" secondAttribute="height" id="Bhu-hW-leN"/>
-                        <constraint firstAttribute="height" constant="200" id="hys-QR-IvM"/>
+                        <constraint firstAttribute="height" id="hys-QR-IvM"/>
                         <constraint firstItem="JcY-QE-RnB" firstAttribute="width" secondItem="oyl-yI-tyq" secondAttribute="width" id="nkR-bW-chm"/>
                         <constraint firstAttribute="right" secondItem="JcY-QE-RnB" secondAttribute="right" id="o31-fU-PdQ"/>
                         <constraint firstItem="JcY-QE-RnB" firstAttribute="centerY" secondItem="oyl-yI-tyq" secondAttribute="centerY" id="z8P-UQ-r4f"/>
