--- a/VUIComponents/Classes/Components/UI/Card/SimpleTextCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/SimpleTextCardView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -30,7 +30,7 @@
                                     <rect key="frame" x="15" y="20" width="309" height="313"/>
                                     <attributedString key="attributedText">
                                         <fragment>
-                                            <mutableString key="content">Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text </mutableString>
+                                            <string key="content">Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text Sample Text Sample Text Sample TextSample TextSample TextSample TextSample TextSample Text Sample Text Sample TextSample Text  Sample Text Sample Text </string>
                                             <attributes>
                                                 <font key="NSFont" size="12" name="Helvetica"/>
                                                 <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
