--- a/VUIComponents/Classes/Components/UI/Card/StatusConfirmationCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/StatusConfirmationCardView.xib
@@ -12,9 +12,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StatusConfirmationCardView">
             <connections>
                 <outlet property="ButtonWidthConstraint" destination="brH-3J-Dq0" id="TgT-pZ-Djg"/>
-                <outlet property="buttolRightPadding" destination="02e-8B-B4l" id="Pj5-Fk-WYa"/>
+                <outlet property="buttonLeadingSpacing" destination="6xV-kX-lxE" id="hoW-7g-a6D"/>
                 <outlet property="contentView" destination="YfQ-Cc-dSn" id="FLD-9u-BjO"/>
-                <outlet property="customButton" destination="QHf-si-AlV" id="8TH-l8-GAP"/>
+                <outlet property="customButton" destination="QHf-si-AlV" id="a9J-Un-l05"/>
                 <outlet property="imageView" destination="ttj-tz-QyY" id="JDm-Jf-bH3"/>
                 <outlet property="textLabel" destination="eXO-wk-XVk" id="mbr-5V-RMr"/>
             </connections>
@@ -25,10 +25,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view alpha="0.84999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YfQ-Cc-dSn">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                    <rect key="frame" x="0.0" y="0.5" width="375" height="69.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXO-wk-XVk" customClass="AnaVodafoneLabel">
-                            <rect key="frame" x="60" y="23" width="300" height="24"/>
+                            <rect key="frame" x="60" y="23" width="300" height="23.5"/>
                             <attributedString key="attributedText">
                                 <fragment content="Sample Text">
                                     <attributes>
@@ -45,14 +45,14 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="correct" translatesAutoresizingMaskIntoConstraints="NO" id="ttj-tz-QyY">
-                            <rect key="frame" x="15" y="20" width="30" height="30"/>
+                            <rect key="frame" x="15" y="19.5" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="BH2-HB-WQm"/>
                                 <constraint firstAttribute="height" constant="30" id="xu0-0f-GhL"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QHf-si-AlV" customClass="CustomButton">
-                            <rect key="frame" x="360" y="12.5" width="0.0" height="45"/>
+                            <rect key="frame" x="360" y="12" width="0.0" height="45"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="TdP-hw-m9D"/>
                                 <constraint firstAttribute="width" id="brH-3J-Dq0"/>
@@ -63,8 +63,8 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="QHf-si-AlV" firstAttribute="leading" secondItem="eXO-wk-XVk" secondAttribute="trailing" id="02e-8B-B4l"/>
                         <constraint firstAttribute="bottom" secondItem="eXO-wk-XVk" secondAttribute="bottom" constant="23" id="1EM-U5-lQ0"/>
+                        <constraint firstItem="QHf-si-AlV" firstAttribute="leading" secondItem="eXO-wk-XVk" secondAttribute="trailing" id="6xV-kX-lxE"/>
                         <constraint firstItem="ttj-tz-QyY" firstAttribute="left" secondItem="YfQ-Cc-dSn" secondAttribute="left" constant="15" id="RlE-Jn-kRY"/>
                         <constraint firstItem="QHf-si-AlV" firstAttribute="centerY" secondItem="YfQ-Cc-dSn" secondAttribute="centerY" id="Srh-eI-bce"/>
                         <constraint firstItem="ttj-tz-QyY" firstAttribute="centerY" secondItem="YfQ-Cc-dSn" secondAttribute="centerY" id="UtV-ql-eDB"/>
@@ -76,16 +76,16 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="YfQ-Cc-dSn" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" id="2SF-lI-awR"/>
-                <constraint firstItem="YfQ-Cc-dSn" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="Ady-sY-mqv"/>
-                <constraint firstItem="YfQ-Cc-dSn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ooi-FJ-Qrk"/>
-                <constraint firstItem="YfQ-Cc-dSn" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="S4e-Py-spw"/>
+                <constraint firstAttribute="bottom" secondItem="YfQ-Cc-dSn" secondAttribute="bottom" id="ajR-Nf-bKV"/>
+                <constraint firstItem="YfQ-Cc-dSn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="iec-3B-4g3"/>
+                <constraint firstAttribute="trailing" secondItem="YfQ-Cc-dSn" secondAttribute="trailing" id="uqV-wf-lQF"/>
+                <constraint firstItem="YfQ-Cc-dSn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="uss-Bs-6I7"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="43" y="168"/>
+            <point key="canvasLocation" x="-3.5" y="66"/>
         </view>
     </objects>
     <resources>
